@@ -3,7 +3,8 @@ ares__close_sockets.c ares_free_string.c ares_search.c ares__get_hostent.c \
 ares_gethostbyaddr.c ares_send.c ares__read_line.c ares_gethostbyname.c	   \
 ares_strerror.c ares_cancel.c ares_init.c ares_timeout.c ares_destroy.c	   \
 ares_mkquery.c ares_version.c ares_expand_name.c ares_parse_a_reply.c	   \
-windows_port.c ares_expand_string.c ares_parse_ptr_reply.c
+windows_port.c ares_expand_string.c ares_parse_ptr_reply.c                 \
+ares_parse_aaaa_reply.c
 
 HHEADERS = ares.h ares_private.h setup.h ares_dns.h ares_version.h nameser.h
 
